--- a/src/index.css
+++ b/src/index.css
@@ -18,9 +18,25 @@ h1{
   width: 50%;
   margin: auto;
   margin-top: 20px;
-  display: block;
+  display: inline-block;
+  height: auto;
+  font-size: 40px;
+  /* padding-top: 10px; */
+  color: white;
+  text-align: center;
+  border: 10px solid blueviolet;
+  border-radius: 20px;
+  margin: 10px;
 
-  height: 80px;
+  background-color: rgb(148, 63, 227);
+}
+input{
+  /* justify-content: center;
+  align-items: center; */
+  width: 50%;
+  margin: 10px;
+
+  margin-top: 20px;
   font-size: 40px;
   padding-top: 10px;
   color: white;
@@ -29,22 +45,11 @@ h1{
   border-radius: 20px;
   background-color: rgb(148, 63, 227);
 }
-input{
-  /* justify-content: center;
-  align-items: center; */
-  width: 50%;
-  margin: auto;
-  display: block;
+.in{
+  display: inline-block;
+  width: auto;
 
-  margin-top: 20px;
-  height: 80px;
-  font-size: 40px;
-  padding-top: 10px;
-  color: white;
-  text-align: center;
-  border: 10px solid blueviolet;
-  border-radius: 20px;
-  background-color: rgb(148, 63, 227);
+
 }
 button{
   /* justify-content: center;
@@ -55,7 +60,7 @@ button{
   margin-top: 20px;
   height: 80px;
   font-size: 40px;
-  padding-top: 10px;
+  /* padding-top: 10px; */
   color: red;
   text-align: center;
   border: 10px solid blueviolet;
