--- a/src/index.css
+++ b/src/index.css
@@ -1,143 +1,144 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(214, 171, 255);
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-.card{
+/* body { */
+  /* margin: 0; */
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', */
+    /* 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', */
+    /* sans-serif; */
+  /* -webkit-font-smoothing: antialiased; */
+  /* -moz-osx-font-smoothing: grayscale; */
+  /* background-color: rgb(214, 171, 255); */
+/* } */
+/*  */
+/* code { */
+  /* font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', */
+    /* monospace; */
+/* } */
+/* .card{ */
   /* border: 10px solid blueviolet; */
-  border-radius: 20px;
-  margin: auto;
-  margin-top: 20px;
-  box-shadow: 1px 1px 15px rgb(56, 23, 87);
-  width: auto;
-  height: auto;
+  /* border-radius: 20px; */
+  /* margin: auto; */
+  /* margin-top: 20px; */
+  /* box-shadow: 1px 1px 15px rgb(56, 23, 87); */
+  /* width: auto; */
+  /* height: auto; */
   /* background-color: rgb(148, 63, 227); */
-  display: flexbox;
-  color: rgb(72, 17, 123);
-  font-size: larger;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-style: oblique;
-  font-weight: bolder;
-  justify-content: center;
-  align-items: center;
-}
-.cards{
-  border: 10px solid blueviolet;
-  padding: 5px;
-  border-radius: 20px;
-  margin: auto;
-  height: auto;
-  margin-top: 20px;
-  box-shadow: 1px 1px 15px rgb(56, 23, 87);
-  width: 90%;
-  background-color: rgb(148, 63, 227);
-  display: flexbox;
-  justify-content: center;
-  align-items: center;
-}
-
-h1{
-  align-items: center;
-  width: auto;
-  margin: auto;  
-  margin-top: 20px;
-  background-color: rgb(103, 30, 171);
-  font-size: 40px;
+  /* display: flexbox; */
+  /* color: rgb(72, 17, 123); */
+  /* font-size: larger; */
+  /* font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
+  /* font-style: oblique; */
+  /* font-weight: bolder; */
+  /* justify-content: center; */
+  /* align-items: center; */
+/* } */
+/* .cards{ */
+  /* border: 10px solid blueviolet; */
+  /* padding: 5px; */
+  /* border-radius: 20px; */
+  /* margin: auto; */
+  /* height: auto; */
+  /* margin-top: 20px; */
+  /* box-shadow: 1px 1px 15px rgb(56, 23, 87); */
+  /* width: 90%; */
+  /* background-color: rgb(148, 63, 227); */
+  /* display: flexbox; */
+  /* justify-content: center; */
+  /* align-items: center; */
+/* } */
+/*  */
+/* h1{ */
+  /* align-items: center; */
+  /* width: auto; */
+  /* margin: auto;   */
+  /* margin-top: 20px; */
+  /* background-color: rgb(103, 30, 171); */
+  /* font-size: 40px; */
   /* padding-top: 10px; */
-  color: white;
-  text-align: center;
-  
-}
-h4{
-
-  margin-top: 20px;
-  background-color: rgb(103, 30, 171);
-  font-size: 40px;
+  /* color: white; */
+  /* text-align: center; */
+  /*  */
+/* } */
+/* h4{ */
+/*  */
+  /* margin-top: 20px; */
+  /* background-color: rgb(103, 30, 171); */
+  /* font-size: 40px; */
   /* padding-top: 10px; */
-  color: white;
-  text-align: center;
-  
-}
-
-h5{
-  font-size: 25px;
-  margin-bottom: 10px;
-  color: white;
-  text-align: center;
-}
-#content{
-  margin-top: 10px;
-  font-size: 15px;
-  padding: 5px;
-  background-color: rgb(87, 15, 154);
-  border-radius: 15px;
-  
-}
-span{
-  text-align: center;
-  display: flexbox;
-  justify-content: center;
-  align-items: center;
-  
-}
-input,li{
+  /* color: white; */
+  /* text-align: center; */
+  /*  */
+/* } */
+/*  */
+/* h5{ */
+  /* font-size: 25px; */
+  /* margin-bottom: 10px; */
+  /* color: white; */
+  /* text-align: center; */
+/* } */
+/* #content{ */
+  /* margin-top: 10px; */
+  /* font-size: 15px; */
+  /* padding: 5px; */
+  /* background-color: rgb(87, 15, 154); */
+  /* border-radius: 15px; */
+  /*  */
+/* } */
+/* span{ */
+  /* text-align: center; */
+  /* display: flexbox; */
+  /* justify-content: center; */
+  /* align-items: center; */
+  /*  */
+/* } */
+input{
   display: flexbox;
   justify-content: center;
   align-items: center;
   width: 70%;
   margin: 10px;
   font-size: 20px;
+  box-shadow: 1px 1px 15px blueviolet;
   color: white;
   text-align: center;
   border: 3px solid rgb(78, 24, 130);
   border-radius: 20px;
   background-color: rgb(103, 30, 171);
 }
-li{
-  display: inline-block;
-  justify-content: center;
-  align-items: center;
-  width: 70%;
-  margin: auto;
-  margin-top: 20px;
-  font-size: 30px;
-  color: white;
-  text-align: center;
-  border: 10px solid blueviolet;
-  border-radius: 20px;
-  background-color: rgb(103, 30, 171);
-}
-/* .in{
-  display: inline-block;
-  width: auto;
-
-
-} */
-button ,select{
-  display: inline-block;
-  margin: 10px;
-  }
-.delete ,select{
-  margin-top: 20px;
-  background-color: rgb(103, 30, 171);
-  font-size: 40px;
+/* li{ */
+  /* display: inline-block; */
+  /* justify-content: center; */
+  /* align-items: center; */
+  /* width: 70%; */
+  /* margin: auto; */
+  /* margin-top: 20px; */
+  /* font-size: 30px; */
+  /* color: white; */
+  /* text-align: center; */
+  /* border: 10px solid blueviolet; */
+  /* border-radius: 20px; */
+  /* background-color: rgb(103, 30, 171); */
+/* } */
+/* /* .in{ */
+  /* display: inline-block; */
+  /* width: auto; */
+/*  */
+/*  */
+/* } */ 
+/* button ,select{ */
+  /* display: inline-block; */
+  /* margin: 10px; */
+  /* } */
+/* .delete ,select{ */
+  /* margin-top: 20px; */
+  /* background-color: rgb(103, 30, 171); */
+  /* font-size: 40px; */
   /* padding-top: 10px; */
-  color: white;
-  text-align: center;
-  display: inline-block;
-  color: white;
-  width: 15%;
-  margin: auto;
-  font-size: 40px;
-  background-color: rgb(147, 3, 3);
-  border-radius: 70px;
-  }
+  /* color: white; */
+  /* text-align: center; */
+  /* display: inline-block; */
+  /* color: white; */
+  /* width: 15%; */
+  /* margin: auto; */
+  /* font-size: 40px; */
+  /* background-color: rgb(147, 3, 3); */
+  /* border-radius: 70px; */
+  /* } */
