--- a/src/index.css
+++ b/src/index.css
@@ -1,35 +1,23 @@
-/* body { */
-  /* margin: 0; */
-  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', */
-    /* 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', */
-    /* sans-serif; */
-  /* -webkit-font-smoothing: antialiased; */
-  /* -moz-osx-font-smoothing: grayscale; */
-  /* background-color: rgb(214, 171, 255); */
-/* } */
-/*  */
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(214, 171, 255);
+  overflow-x: hidden;
+}
+
 /* code { */
   /* font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', */
     /* monospace; */
 /* } */
-/* .card{ */
-  /* border: 10px solid blueviolet; */
-  /* border-radius: 20px; */
-  /* margin: auto; */
-  /* margin-top: 20px; */
-  /* box-shadow: 1px 1px 15px rgb(56, 23, 87); */
-  /* width: auto; */
-  /* height: auto; */
-  /* background-color: rgb(148, 63, 227); */
-  /* display: flexbox; */
-  /* color: rgb(72, 17, 123); */
-  /* font-size: larger; */
-  /* font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
-  /* font-style: oblique; */
-  /* font-weight: bolder; */
-  /* justify-content: center; */
-  /* align-items: center; */
-/* } */
+#card{
+  box-shadow: 1px 1px 15px rgb(56, 23, 87);
+  align-items: center;
+  margin-top: 0px;
+}
 /* .cards{ */
   /* border: 10px solid blueviolet; */
   /* padding: 5px; */
@@ -45,35 +33,33 @@
   /* align-items: center; */
 /* } */
 /*  */
-/* h1{ */
-  /* align-items: center; */
-  /* width: auto; */
-  /* margin: auto;   */
-  /* margin-top: 20px; */
-  /* background-color: rgb(103, 30, 171); */
-  /* font-size: 40px; */
-  /* padding-top: 10px; */
-  /* color: white; */
-  /* text-align: center; */
-  /*  */
-/* } */
-/* h4{ */
+h1{
+  font-style: oblique;
+  background-color: rgb(103, 30, 171);
+  font-size: 40px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  padding: 10px;
+  color: white;
+  border-radius: 8px;
+  
+}
+h4{
+  border-radius: 8px;
+  margin: 20px;
+  background-color: rgb(103, 30, 171);
+  font-size: 20px;
+  padding: 10px;
+  color: white;
+  text-align: center;
+  font-style: italic;  
+}
 /*  */
-  /* margin-top: 20px; */
-  /* background-color: rgb(103, 30, 171); */
-  /* font-size: 40px; */
-  /* padding-top: 10px; */
-  /* color: white; */
-  /* text-align: center; */
-  /*  */
-/* } */
-/*  */
-/* h5{ */
-  /* font-size: 25px; */
-  /* margin-bottom: 10px; */
-  /* color: white; */
-  /* text-align: center; */
-/* } */
+h5{
+  font-size: 20px;
+  color: white;
+  text-align: left;
+  font-style: normal;
+}
 /* #content{ */
   /* margin-top: 10px; */
   /* font-size: 15px; */
@@ -89,6 +75,14 @@
   /* align-items: center; */
   /*  */
 /* } */
+.menu_active{
+  font-weight: bold;
+  border-bottom: 1px solid rgb(47, 22, 130); 
+}
+#right{
+  text-align: center;
+  width: 500px;
+}
 input{
   display: flexbox;
   justify-content: center;
@@ -103,42 +97,113 @@ input{
   border-radius: 20px;
   background-color: rgb(103, 30, 171);
 }
-/* li{ */
-  /* display: inline-block; */
-  /* justify-content: center; */
-  /* align-items: center; */
-  /* width: 70%; */
-  /* margin: auto; */
-  /* margin-top: 20px; */
-  /* font-size: 30px; */
-  /* color: white; */
-  /* text-align: center; */
-  /* border: 10px solid blueviolet; */
-  /* border-radius: 20px; */
-  /* background-color: rgb(103, 30, 171); */
-/* } */
-/* /* .in{ */
-  /* display: inline-block; */
-  /* width: auto; */
-/*  */
-/*  */
-/* } */ 
-/* button ,select{ */
-  /* display: inline-block; */
-  /* margin: 10px; */
-  /* } */
-/* .delete ,select{ */
-  /* margin-top: 20px; */
-  /* background-color: rgb(103, 30, 171); */
-  /* font-size: 40px; */
-  /* padding-top: 10px; */
-  /* color: white; */
-  /* text-align: center; */
-  /* display: inline-block; */
-  /* color: white; */
-  /* width: 15%; */
-  /* margin: auto; */
-  /* font-size: 40px; */
-  /* background-color: rgb(147, 3, 3); */
-  /* border-radius: 70px; */
-  /* } */
+body{
+  background-color: rgb(182, 133, 227);
+}
+form{
+  padding-bottom: 20px;
+
+}
+input, textarea{
+  display: block;
+  padding: 5px;
+  margin: 15px auto;
+  width: 60%;
+  outline: none;
+  border: 2px solid black;
+  border-radius: 5px;
+}
+
+.btn{
+  text-decoration: none;
+  margin: 10px auto;
+  /* display: block; */
+  /* padding: 2px 20px; */
+  background: #7056d6;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  border: 2px solid rgba(0, 0, 0, 0);
+  box-shadow: 1px 1px 5px 0px black;
+  border-radius: 9px;
+  cursor: pointer;
+  outline: none;
+}
+li{
+  text-decoration: none;
+  list-style: none;
+}
+#contactsection{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: auto;
+}
+#contactsection .heading {
+  display: block;
+  width: 100%;
+  margin: auto;
+}
+#contactsection .heading h2{
+  text-decoration: none;
+  color: white;
+  text-align: center;
+  font-family: 'Rubik', sans-serif;
+  text-shadow: 1px 2px 10px rgb(123 48 212);
+  font-size: 40px;
+  padding: 20px;
+}
+@media only screen and (max-width: 600px) {
+  body {
+    background-color: lightblue;
+    /* overflow-x: hidden; */
+
+  }
+  img{
+    /* width: 5em; */
+  }
+  .navbar{
+    /* height: 60px; */
+  }
+  h1{
+    font-size: 20px;
+    /* text-align: center; */
+    display: flex;
+    width: auto;
+    justify-content: center;
+    align-items: center;
+  }
+  #card{
+    columns: 10;
+    text-align: center;
+  }
+  .my-3{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  #name #phone #more #address #gender #email #add {
+    font-size: 15px;
+    display: inline-block;
+    columns: 3;
+  }
+  h5 input textarea{
+    font-size: 15px;
+
+  }
+  /* #NavBar{
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    z-index: 1;
+  }
+  footer{
+    position: fixed;
+    bottom: 0px;
+    width: 100%;
+    z-index: -1;
+  } */
+
+}
